add google sheets integration

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # Google Sheets Configuration
+# Set to true to use Google Sheets instead of in-memory mock data
+USE_GOOGLE_SHEETS=false
+
 # Get the spreadsheet ID from the URL: https://docs.google.com/spreadsheets/d/{SPREADSHEET_ID}/edit
 GOOGLE_SHEETS_ID=your-spreadsheet-id-here
+
+# Which tab/worksheet to use (leave empty for first sheet)
+GOOGLE_SHEET_TAB=
 
 # Path to your Google Cloud service account JSON key file
 GOOGLE_SERVICE_ACCOUNT_FILE=/path/to/service-account.json
